high contrast fixes

--- a/vtr-ui/src/styles.scss
+++ b/vtr-ui/src/styles.scss
@@ -446,6 +446,13 @@ ngb-tooltip-window.vtr-tooltip.tooltip {
 		border-radius: 1rem;
 		background: $light;
 		padding: 4rem;
+		@media #{$black-on-white} {
+			border: 0.1rem solid $gaming_darkest;
+		}
+		@media #{$white-on-black} {
+			border: 0.1rem solid $gaming_darkest;
+		}
+
 	}
 }
 
